syntax = "proto3";
package svc;
option go_package = "parrot/proto/svc";

import "proto/svc/bill/bill.proto";

message AddBillRequest {
    bill.PayType pay_type = 1;
    repeated string payee_list = 2;
    float amount = 3;
    string description = 4;
}

message AddBillResponse {
    int32 status_code = 1;
    string err_desc = 2;
}

message GetBillRequest {
    string bill_id = 1;
}

message GetBillResponse {
    bill.Bill bill = 1;
}

message GetAllBillRequest {
    bool only_me = 1;
}

message GetAllBillResponse {
    repeated bill.Bill bill_list = 1;
}

service Bill {
    rpc Add(AddBillRequest) returns (AddBillResponse) {};
    rpc Get(GetBillRequest) returns (GetBillResponse) {};
    rpc GetAll(GetAllBillRequest) returns (GetAllBillResponse) {};
}